Flusspferd Change Log
=====================

Release 0.7
-----------

2009-06-20:
- Added optional GNU/readline support (useful due to bugs in libedit).
- Added --no-global-history command line switch for deactivating the permanent
  history.
- Added --history-file command line switch for setting the history file.

2009-06-19:
- Add -I command line switch for specifying module paths.
- Add -M command line switch for loading modules (with 'require').
- Add permanent history to the shell.
- Add ServerJS 'system' module (https://wiki.mozilla.org/ServerJS/System).

2009-06-18:
- Remove Blob and use Binary everywhere.
- Adapted (method/class) names that contained Blob to use Binary instead.
- Eliminate the IO and XML global variables.

2009-06-12:
- Lower-case module names for included modules (it remains case-sensitive).
- FLUSSPFERD_LOADER gets passed the context object as its second parameter.
- Split FLUSSPFERD_LOADER into FLUSSPFERD_LOADER (2 parameters) and
  FLUSSPFERD_LOADER_SIMPLE (1 parameter).

Release 0.6.1
-------------

2009-06-13:
- Some plugins can now be enabled/disabled (PLUGIN_XXX) and required
  (FORCE_PLUGINS) in cmake.

Releases 0.5, 0.5.1, 0.6
------------------------

There was no change log for these releases.